--- a/index.html
+++ b/index.html
@@ -23,9 +23,20 @@
                     <li href="#">contacts</li>
                 </ul>
             </div>
+            <div id="hand">
+                <img src="image/hand.png" alt="">
+            </div>
         </div>
         <div class="home">
-            <div class="container"></div>
+            <div class="container">
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, ratione repellat ullam consectetur, quo rerum quibusdam modi atque commodi nostrum magni? Consequatur sequi magni ad voluptatem laborum voluptate fuga nam.</p>
+                </div>
+                <div id="img">
+                    <img src="image/home_collage.png" alt="">
+                </div>
+                
+            </div>
         </div>
         <div id="footer">
             
