--- a/index.html
+++ b/index.html
@@ -84,19 +84,13 @@
                 </div>
             </div>
 
-        </div>
+        </div>  
         <div id="footer">
             <div id="transparency"></div>
             <div id="sprite">
-                <div class="icon-instagram">
-                    <span class="mls"></span>
-                </div>
-                <div class="icon-pinterest">
-                    <span class="mls"></span>
-                </div>
-                <div class="icon-facebook">
-                    <span class="mls"></span>
-                </div>
+                    <a class="icon-instagram" href="https://www.instagram.com"> </a>
+                    <a class="icon-pinterest" href="https://www.pinterest.com/"></a>
+                    <a class="icon-facebook" href="https://www.facebook.com/"></a>
             </div>
             <div id="adress">Adress: hgjhgkjhzdkjvzhvjlz hgjhgjhgkhgk Tel. 34837453475634587</div>
 
