--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
-    <title>site</title>
+    <title>moopsi</title>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -26,15 +26,15 @@
         <div id="header">
             <div class="container">
                 <ul class="nav">
-                    <li href="#">home</li>
-                    <li href="#">illustration</li>
-                    <li href="#">patterns</li>
+                    <a href="index.html"><li>home</li></a>
+                    <a href="illustration.html"><li>illustration</li>
+                        <a><li href="patterns.html">patterns</li></a>
                     <li href="#">
                         <img src="image/logo.png" alt="logo" height="118" width="104">
                     </li>
-                    <li href="#">collage</li>
-                    <li href="#">shop</li>
-                    <li href="#">contacts</li>
+                    <a href="collage.html"><li>collage</li></a>
+                    <a href="shop.html"><li>shop</li></a>
+                    <a href="contacts.html"><li >contacts</li></a>
                 </ul>
             </div>
             <!-- <div id="hand"> -->
@@ -88,9 +88,9 @@
         <div id="footer">
             <div id="transparency"></div>
             <div id="sprite">
-                    <a class="icon-instagram" href="https://www.instagram.com"> </a>
-                    <a class="icon-pinterest" href="https://www.pinterest.com/"></a>
-                    <a class="icon-facebook" href="https://www.facebook.com/"></a>
+                    <a class="icon-instagram" href="https://www.instagram.com" target="blank"> </a>
+                    <a class="icon-pinterest" href="https://www.pinterest.com/" target="blank"></a>
+                    <a class="icon-facebook" href="https://www.facebook.com/" target="blank"></a>
             </div>
             <div id="adress">Adress: hgjhgkjhzdkjvzhvjlz hgjhgjhgkhgk Tel. 34837453475634587</div>
 
