--- a/contacts.html
+++ b/contacts.html
@@ -26,28 +26,80 @@
         <div id="header">
             <div class="container">
                 <ul class="nav">
-                    <li><a href="index.html">home</a></li>
-                    <li href="illustration.html">illustration</li>
-                    <li href="patterns.html">patterns</li>
+                    <a href="index.html">
+                        <li>home</li>
+                    </a>
+                    <a href="illustration.html">
+                        <li>illustration</li>
+                    </a>
+                    <a href="patterns.html">
+                        <li>patterns</li>
+                    </a>
                     <li href="#">
                         <img src="image/logo.png" alt="logo" height="118" width="104">
                     </li>
-                    <li href="collage.html">collage</li>
-                    <li href="shop.html">shop</li>
-                    <li href="contacts.html">contacts</li>
+                    <a href="collage.html">
+                        <li>collage</li>
+                    </a>
+                    <a href="shop.html">
+                        <li>shop
+                        </li>
+                    </a>
+                    <a href="contacts.html">
+                        <li class="active">contacts</li>
+                    </a>
                 </ul>
             </div>
-            <!-- <div id="hand"> -->
-            <!-- <img src="image/hand.png" alt=""> -->
-            <!-- </div> -->
         </div>
-
+        <div class="container">
+            <div class="contact col-md-3 col-md-offset-1">
+                <h1>Contact</h1>
+                <p>Please contact at me:</p>
+                <p>email: michelabuttignol@gmail.com</p>
+                <p>ph.19177038216</p>
+                <p>or use the form below</p>
+            </div>
+            <div class="form col-md-7">
+                <div class="col-md-12">
+                    <label>Name*</label>
+                </div>
+                <div class="row">
+                    <form class="form-inline" action="/action_page.php">
+                        <div class="form-group col-md-6" >
+                            <input type="text" id="first-name" class="form-control">
+                            <br>
+                            <label for="first-name">first-name</label>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <input type="text" id="last-name" class="form-control" >
+                            <br>
+                            <label for="last-name">last-name</label>
+                        </div>
+                </div>
+                </form>
+                <form action="/action_page.php">
+                    <div class="form-group">
+                        <label for="email">Email address*</label>
+                        <input type="email" class="form-control" id="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="subject">Subject*</label>
+                        <input type="text   " class="form-control" id="subject">
+                    </div>
+                    <div class="form-group">
+                        <label for="comment">Message*:</label>
+                        <textarea class="form-control" rows="5" id="comment"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+            </div>
+        </div>
         <div id="footer">
             <div id="transparency"></div>
             <div id="sprite">
-                    <a class="icon-instagram" href="https://www.instagram.com" target="blank"> </a>
-                    <a class="icon-pinterest" href="https://www.pinterest.com/" target="blank"></a>
-                    <a class="icon-facebook" href="https://www.facebook.com/" target="blank"></a>
+                <a class="icon-instagram" href="https://www.instagram.com" target="blank"> </a>
+                <a class="icon-pinterest" href="https://www.pinterest.com/" target="blank"></a>
+                <a class="icon-facebook" href="https://www.facebook.com/" target="blank"></a>
             </div>
             <div id="adress">Adress: hgjhgkjhzdkjvzhvjlz hgjhgjhgkhgk Tel. 34837453475634587</div>
 
