--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="header">
             <div class="container">
                 <ul class="nav">
-                    <a href="index.html"><li>home</li></a>
+                    <a href="index.html"><li class="active">home</li></a>
                     <a href="illustration.html"><li>illustration</li>
                         <a><li href="patterns.html">patterns</li></a>
                     <li href="#">
