--- a/index.html
+++ b/index.html
@@ -26,15 +26,26 @@
         <div id="header">
             <div class="container">
                 <ul class="nav">
-                    <a href="index.html"><li class="active">home</li></a>
-                    <a href="illustration.html"><li>illustration</li>
-                        <a><li href="patterns.html">patterns</li></a>
-                    <li href="#">
-                        <img src="image/logo.png" alt="logo" height="118" width="104">
-                    </li>
-                    <a href="collage.html"><li>collage</li></a>
-                    <a href="shop.html"><li>shop</li></a>
-                    <a href="contacts.html"><li >contacts</li></a>
+                    <a href="index.html">
+                        <li class="active">home</li>
+                    </a>
+                    <a href="illustration.html">
+                        <li>illustration</li>
+                        <a>
+                            <li href="patterns.html">patterns</li>
+                        </a>
+                        <li href="#">
+                            <img src="image/logo.png" alt="logo" height="118" width="104">
+                        </li>
+                        <a href="collage.html">
+                            <li>collage</li>
+                        </a>
+                        <a href="shop.html">
+                            <li>shop</li>
+                        </a>
+                        <a href="contacts.html">
+                            <li>contacts</li>
+                        </a>
                 </ul>
             </div>
             <!-- <div id="hand"> -->
@@ -84,13 +95,13 @@
                 </div>
             </div>
 
-        </div>  
+        </div>
         <div id="footer">
             <div id="transparency"></div>
             <div id="sprite">
-                    <a class="icon-instagram" href="https://www.instagram.com" target="blank"> </a>
-                    <a class="icon-pinterest" href="https://www.pinterest.com/" target="blank"></a>
-                    <a class="icon-facebook" href="https://www.facebook.com/" target="blank"></a>
+                <a class="icon-instagram" href="https://www.instagram.com" target="blank"> </a>
+                <a class="icon-pinterest" href="https://www.pinterest.com/" target="blank"></a>
+                <a class="icon-facebook" href="https://www.facebook.com/" target="blank"></a>
             </div>
             <div id="adress">Adress: hgjhgkjhzdkjvzhvjlz hgjhgjhgkhgk Tel. 34837453475634587</div>
 
