--- a/patterns.html
+++ b/patterns.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
-    <title>moopsi</title>
+    <title>moopsi-patterns</title>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -27,12 +27,12 @@
             <div class="container">
                 <ul class="nav">
                     <a href="index.html">
-                        <li class="active">home</li>
+                        <li>home</li>
                     </a>
                     <a href="illustration.html">
                         <li>illustration</li>
                         <a>
-                            <li href="patterns.html">patterns</li>
+                            <li href="patterns.html" class="active">patterns</li>
                         </a>
                         <li href="#">
                             <img src="image/logo.png" alt="logo" height="118" width="104">
@@ -52,48 +52,38 @@
             <!-- <img src="image/hand.png" alt=""> -->
             <!-- </div> -->
         </div>
-        <div class="home">
-            <div class="container">
-                <div>
-                    <p id="home">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, ratione repellat ullam consectetur, quo
-                        rerum quibusdam modi atque commodi nostrum magni? Consequatur sequi magni ad voluptatem laborum voluptate
-                        fuga nam.</p>
+        <div class="container">
+            <div class="row ">
+                <div class=" col-md-3 col-lg-3 watercolor-patterns">
+                    <!-- <div class=""> -->
+                    <a href="#">
+                        <img class="img-patterns" src="image/patterns/watercolor_patterns.jpg" alt="watercolor_patterns">
+                    </a>
+                    <h1>watercolor patterns</h1>
+                    <p>Эти бессшовные узоры созданы на компьютере с исспользованием иллюстраций, нарисованных ранее мной вручную
+                        с помощью акварелию.Они могут бесконечно повторяться в любых направлениях.</p>
                 </div>
 
-                <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                    <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                        <li data-target="#myCarousel" data-sl ide-to="0" class="active"></li>
-                        <li data-target="#myCarousel" data-slide-to="1"></li>
-                        <li data-target="#myCarousel" data-slide-to="2"></li>
-                    </ol>
-
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <img src="image/home_collage.png" alt="collage" width="">
-                        </div>
-
-                        <div class="item">
-                            <img src="image/home_abstract.png" alt="abstract">
-                        </div>
-
-                        <div class="item">
-                            <img src="image/home_watercolor.png" alt="watercolor">
-                        </div>
-                    </div>
-
-                    <!-- Left and right controls -->
-                    <a id="control" class="left carousel-control" href="#myCarousel" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                        <span class="sr-only">Previous</span>
+                <div class="col-md-3 col-lg-3 collage-patterns ">
+                    <a href="#">
+                        <img class="img-patterns" src="image/patterns/collage_pattern.jpg" alt="collage_pattern">
                     </a>
-                    <a id="control" class="right carousel-control" href="#myCarousel" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                        <span class="sr-only">Next</span>
+                    <h1>collage patterns</h1>
+                    <p>Эти бесшовные узоры так же созданы на компьютере, с помощью отсканированных коллажных композиций созданных
+                        вручную ранее. Они имеют много необычных и очень реалистичных современных текстур.</p>
+
+                </div>
+                <div class=" col-md-3 col-lg-3 abstract-patterns">
+                    <a href="#">
+                        <img class="img-patterns" src="image/patterns/abstract_pattern.jpg" alt="abstract_pattern">
                     </a>
+                    <h1>absrtact patterns</h1>
+                    <p>Эти узоры так же бесконечно повторяются во всех направлениях. Они созданы на компьютере с использованием
+                        ранее нарисованных абстрактных композиций с помощью маркеров и туши.</p>
+
                 </div>
             </div>
+
 
         </div>
         <div id="footer">
