--- a/patterns_watwecolor.html
+++ b/patterns_watwecolor.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
-    <title>moopsi</title>
+    <title>moopsi-patterns-water-colors</title>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -27,12 +27,12 @@
             <div class="container">
                 <ul class="nav">
                     <a href="index.html">
-                        <li class="active">home</li>
+                        <li>home</li>
                     </a>
                     <a href="illustration.html">
                         <li>illustration</li>
                         <a>
-                            <li href="patterns.html">patterns</li>
+                            <li href="patterns.html" class="active">patterns</li>
                         </a>
                         <li href="#">
                             <img src="image/logo.png" alt="logo" height="118" width="104">
@@ -52,49 +52,49 @@
             <!-- <img src="image/hand.png" alt=""> -->
             <!-- </div> -->
         </div>
-        <div class="home">
-            <div class="container">
-                <div>
-                    <p id="home">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, ratione repellat ullam consectetur, quo
-                        rerum quibusdam modi atque commodi nostrum magni? Consequatur sequi magni ad voluptatem laborum voluptate
-                        fuga nam.</p>
+        <div class="container">
+            <div class="row ">
+                <div class="col-md-6 col-lg-6 vcenter">
+                    <img class="img-responsive" src="image/patterns/watercolor_patterns/main_watercolor_patterns.jpg" alt="">
                 </div>
-
-                <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                    <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                        <li data-target="#myCarousel" data-sl ide-to="0" class="active"></li>
-                        <li data-target="#myCarousel" data-slide-to="1"></li>
-                        <li data-target="#myCarousel" data-slide-to="2"></li>
-                    </ol>
-
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <img src="image/home_collage.png" alt="collage" width="">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 vcenter">
+                    <div class="row">
+                        <div class="col-xs-4 col-sm-4 col-md-4 col-img-pat">
+                            <img  class="img-patterns-tmp" src="image/patterns/watercolor_patterns/01.jpg" alt="">
                         </div>
-
-                        <div class="item">
-                            <img src="image/home_abstract.png" alt="abstract">
+                        <div class="col-xs-4 col-sm-4 col-md-4 col-img-pat">
+                            <img class="img-patterns-tmp" src="image/patterns/watercolor_patterns/02.jpg" alt="">
                         </div>
-
-                        <div class="item">
-                            <img src="image/home_watercolor.png" alt="watercolor">
+                        <div class="col-xs-4 col-sm-4 col-md-4 col-img-pat">
+                            <img class="img-patterns-tmp" src="image/patterns/watercolor_patterns/03.jpg" alt="">
                         </div>
                     </div>
 
-                    <!-- Left and right controls -->
-                    <a id="control" class="left carousel-control" href="#myCarousel" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a id="control" class="right carousel-control" href="#myCarousel" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+                    <div class="row">
+                        <div class="col-xs-4 col-sm-4 col-md-4 col-img-pat">
+                            <img class="img-patterns-tmp" src="image/patterns/watercolor_patterns/04.jpg" alt="">
+                        </div>
+                        <div class="col-xs-4 col-sm-4 col-md-4 col-img-pat">
+                            <img class="img-patterns-tmp" src="image/patterns/watercolor_patterns/05.jpg" alt="">
+                        </div>
+                        <div class="col-xs-4 col-sm-4 col-md-4 col-img-pat">
+                            <img class="img-patterns-tmp" src="image/patterns/watercolor_patterns/06.jpg" alt="">
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-xs-4 col-sm-4 col-md-4 col-img-pat">
+                            <img class="img-patterns-tmp" src="image/patterns/watercolor_patterns/07.jpg" alt="">
+                        </div>
+                        <div class="col-xs-4 col-sm-4 col-md-4 col-img-pat">
+                            <img class="img-patterns-tmp" src="image/patterns/watercolor_patterns/08.jpg" alt="">
+                        </div>
+                        <div class="col-xs-4 col-sm-4 col-md-4 col-img-pat">
+                            <img class="img-patterns-tmp" src="image/patterns/watercolor_patterns/09.jpg" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
-
         </div>
         <div id="footer">
             <div id="transparency"></div>
