--- a/patterns.html
+++ b/patterns.html
@@ -31,8 +31,8 @@
                     </a>
                     <a href="illustration.html">
                         <li>illustration</li>
-                        <a>
-                            <li href="patterns.html" class="active">patterns</li>
+                        <a href="patterns.html">
+                            <li  class="active">patterns</li>
                         </a>
                         <li href="#">
                             <img src="image/logo.png" alt="logo" height="118" width="104">
