--- a/shop.html
+++ b/shop.html
@@ -23,6 +23,7 @@
 
 <body>
     <div id="wrapper">
+
         <div id="header">
             <div class="container">
                 <ul class="nav">
@@ -32,16 +33,16 @@
                     <a href="illustration.html">
                         <li>illustration</li>
                         <a href="patterns.html">
-                            <li >patterns</li>
+                            <li>patterns</li>
                         </a>
                         <li href="#">
                             <img src="image/logo.png" alt="logo" height="118" width="104">
                         </li>
                         <a href="collage.html">
-                            <li class="active">collage</li>
+                            <li>collage</li>
                         </a>
                         <a href="shop.html">
-                            <li>shop</li>
+                            <li class="active">shop</li>
                         </a>
                         <a href="contacts.html">
                             <li>contacts</li>
@@ -52,45 +53,42 @@
             <!-- <img src="image/hand.png" alt=""> -->
             <!-- </div> -->
         </div>
+        
         <div class="container">
-            <div>
-                <p class="text-center">цифровые копиии сделанных вручную коллажей хорошо смотряться в интерьере </p>
+            <div class="row ">
+            <div class="shop-paper col-md-4 col-lg-4">
+                <!-- <div class=""> -->
+                <a href="#">
+                    <img class="img-shop" src="image/shop/paper&canavas.jpg" alt="paper&canavas">
+                </a>
+                <p class="text-right">paper and canavas</p>
             </div>
-            <div class="row">
-                <div class=" col-md-2 col-lg-2 col-collage-centrd">
-                    <img class="img-collage" src="image/collage/01.jpg" alt="01">
-                </div>
 
-                <div class=" col-md-2 col-lg-2 col-collage-centrd">
-                    <img class="img-collage" src="image/collage/02.jpg" alt="01">
-                    <img class="img-collage" src="image/collage/06.jpg" alt="01">
-                </div>
-
-                <div class=" col-md-2 col-lg-2 col-collage-centrd">
-                    <img class="img-collage" src="image/collage/03.jpg" alt="01">
-                    <img class="img-collage" src="image/collage/07.jpg" alt="01">
-                </div>
-
-                <div class=" col-md-2 col-lg-2 col-collage-centrd">
-                    <img class="img-collage" src="image/collage/04.jpg" alt="01">
-                    <img class="img-collage" src="image/collage/08.jpg" alt="01">
-                </div>
-                <div class=" col-md-2 col-lg-2 col-collage-centrd">
-                    <img class="img-collage" src="image/collage/05.jpg" alt="01">
-                </div>
-
+            <div class="shop-tshirt col-md-4 col-lg-4">
+                <a href="#">
+                    <img class="img-shop tshirt" src="image/Shop/t-sh.jpg" alt="T-shirt">
+                </a>
+                <p class="text-right">t-shirt</p>
+            </div>
+            <div class="shop-pillow col-md-4 col-lg-4">
+                <a href="#">
+                    <img class="img-shop pillows" src="image/Shop/pillows.jpg" alt="pillow">
+                </a>
+                <p class="text-right">pillows</p>
             </div>
         </div>
-        <div id="footer">
-            <div id="transparency"></div>
-            <div id="sprite">
-                <a class="icon-instagram" href="https://www.instagram.com" target="blank"> </a>
-                <a class="icon-pinterest" href="https://www.pinterest.com/" target="blank"></a>
-                <a class="icon-facebook" href="https://www.facebook.com/" target="blank"></a>
-            </div>
-            <div id="adress">Adress: hgjhgkjhzdkjvzhvjlz hgjhgjhgkhgk Tel. 34837453475634587</div>
 
+    </div>
+    <div id="footer">
+        <div id="transparency"></div>
+        <div id="sprite">
+            <a class="icon-instagram" href="https://www.instagram.com" target="blank"> </a>
+            <a class="icon-pinterest" href="https://www.pinterest.com/" target="blank"></a>
+            <a class="icon-facebook" href="https://www.facebook.com/" target="blank"></a>
         </div>
+        <div id="adress">Adress: hgjhgkjhzdkjvzhvjlz hgjhgjhgkhgk Tel. 34837453475634587</div>
+
+    </div>
     </div>
 
 
